<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nEmoji</string>
    <string name="app_name_full">Jun Wang</string>
    <string name="setting_title">Setting</string>
    <string name="setting_behavior">Set behavior when click Emoji</string>
    <string name="setting_behavior_clip">Clip to clipboard</string>
    <string name="setting_behavior_clip_value" translatable="false">CLIP</string>

    <string name="setting_behavior_send">Send directly</string>
    <string name="setting_behavior_send_value" translatable="false">SEND</string>

    <string name="setting_hidden_app_title">Hidden APP</string>
    <string name="setting_hidden_app_summary">Hidden APP after emoticon copy</string>

    <string name="setting_copy_tip_title">Popup tip</string>
    <string name="setting_copy_tip_summary">Popup copy success tip</string>

    <string name="setting_notification_icon_title">Notification icon</string>
    <string name="setting_notification_icon_summary">Show notification icon at status bar</string>

    <string name="copied_toast_text">Copied!</string>


    <string name="action_settings">Settings</string>
    <string name="back_home_title">Exit</string>

    <string name="ad_unit_id" translatable="false">a152d3f8185da31</string>
    <string name="test_machine_id" translatable="false">FCA35BE16BC430A8FFA13D0F90FE18A7</string>

</resources>
